// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Position handles responsive value 1`] = `
{
  "variables": {
    "--rs-position-l": "fixed",
    "--rs-position-s": "absolute",
  },
}
`;

exports[`Styles/Position handles undefined value 1`] = `null`;

exports[`Styles/Position handles value 1`] = `
{
  "variables": {
    "--rs-position-s": "absolute",
  },
}
`;
